[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/Images/FactoryProduceIcon.png" type="Texture" id=1]
[ext_resource path="res://UI/LocalResourcesSimple.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/Images/FactoryMilitaryIcon.png" type="Texture" id=3]
[ext_resource path="res://UI/LocalResourceDetailed.gd" type="Script" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Panel" type="Panel" parent="."]
margin_right = 135.0
margin_bottom = 58.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
margin_right = 95.0
margin_bottom = 51.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
margin_right = 43.0
margin_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer/VBoxContainer"]
margin_right = 43.0
margin_bottom = 32.0
texture = ExtResource( 3 )

[node name="MilitaryFactory" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 43.0
margin_bottom = 50.0
text = "0/0"
align = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/HBoxContainer"]
margin_left = 47.0
margin_right = 91.0
margin_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer/VBoxContainer2"]
margin_right = 44.0
margin_bottom = 32.0
texture = ExtResource( 1 )
flip_h = true

[node name="FoodFactory" type="Label" parent="Panel/HBoxContainer/VBoxContainer2"]
margin_top = 36.0
margin_right = 44.0
margin_bottom = 50.0
text = "0/0"
align = 1

[node name="MilitaryStruggle" parent="Panel/HBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 95.0
margin_right = 95.0
margin_bottom = 51.0
